# anime-bot

./: LICENSE  README.md  anime-bot.cabal  stack.yaml
app/: Main.hs
src/: GitHub.hs  LineNotify.hs  Messages.hs  Random.hs
src/LineNotify/: Type.hs
