name:                anime-bot
version:             0.1.0.0
synopsis:            anime bot pushing @alldne to work hard, written in Haskell
description:         Please see README.md
homepage:            https://github.com/team-kke/anime-bot
license:             BSD3
license-file:        LICENSE
author:              Jun
maintainer:          me@noraesae.net
copyright:           2016 Jun
category:            Bot
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitHub
  build-depends:       base >= 4.7 && < 4.9
                     , github
                     , vector
                     , text
                     , time
  default-language:    Haskell2010

executable anime-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , anime-bot
                     , text
                     , vector
  default-language:    Haskell2010

test-suite anime-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , anime-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/team-kke/anime-bot
